--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Rescript graph reconciler</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/example/main.jsx"></script>
+    <script type="module" src="/lib/es6_global/example/Main.bs.js"></script>
   </body>
 </html>
