--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Rescript graph reconciler</title>
+    <title>Rescript diagram</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/lib/es6_global/example/Main.bs.js"></script>
+    <script type="module" src="/lib/es6_global/example/App.bs.js"></script>
   </body>
 </html>
