--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/lib/es6_global/example/App.bs.js"></script>
+    <script type="module" src="/lib/es6_global/example/App.js"></script>
   </body>
 </html>
